--- a/Dockerfile.converter
+++ b/Dockerfile.converter
@@ -31,7 +31,7 @@ WORKDIR /docker_ws/src/
 
 # Use a single RUN layer to minimize image size
 RUN rm -rf ouster-ros && \
-    git clone -b ros2 --filter=blob:none --no-checkout https://github.com/ouster-lidar/ouster-ros.git && \
+    git clone -b ros2 --filter=blob:none --no-checkout https://github.com/errorcodecritical/ouster-ros && \
     cd ouster-ros && \
     git sparse-checkout set --cone ouster-sensor-msgs && \
     git checkout ros2 && \
@@ -50,7 +50,6 @@ ENV PATH="/app/.venv/bin:$PATH"
 COPY ./docker_build/docker-entrypoint.sh /app/docker-entrypoint.sh
 RUN chmod +x /app/docker-entrypoint.sh
 
-COPY ./docker_build/convert_bag_packets.py /app/convert_bag_packets.py
 COPY ./docker_build/requirements.txt /app/requirements.txt
 
 # Install pip tools first
