--- a/Dockerfile.converter
+++ b/Dockerfile.converter
@@ -1,5 +1,5 @@
 # Use a stable python base
-FROM ros2-apparatus-base:jazzy AS converter
+FROM ros:jazzy-ros-base
 
 RUN apt update --fix-missing
 
@@ -12,6 +12,9 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
     pkg-config \
     python3-venv \
     python3-dev \
+    python3-colcon-common-extensions \
+    python3-pip \
+    python3-rosdep \
     libcap-dev \
     libpcap-dev \
     libzip-dev \
