--- a/Dockerfile.rqt_bag
+++ b/Dockerfile.rqt_bag
@@ -4,7 +4,9 @@ ENV PYTHON_VERSION=python3
 ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update \
-    && apt-get install -y ros-jazzy-rqt-bag \
+    && apt-get install -y \
+    ros-jazzy-rqt-bag \
+    ros-jazzy-rviz2 \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
